# form_submission_service

./: .coveragerc  .dockerignore  .env.example  .env.test.example  .gitattributes  .gitignore  Dockerfile  README.md  TESTING.md  alembic.ini  compose.override.yml  compose.test.yml  compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/core/: dependencies.py  logging.py
app/core/config/: settings.py
app/core/db/: models.py  rls.py  session.py
app/core/db/migrations/: env.py
app/core/domain/: entities.py  events.py  permissions.py  value_objects.py
app/core/exceptions/: __init__.py
app/core/middleware/: auth_logging.py  rate_limit.py  rls_middleware.py
app/core/security/: hashing.py  indentity.py  jwt.py
app/modules/auth/api/: router.py  schemas.py
app/modules/forms/: __init__.py
app/modules/submissions/: __init__.py
docs/: api.md  architecture.md  configuration.md  development.md  overview.md  testing.md
docs/database/: migrations.md  schema.md
docs/deployment/: docker.md  production.md
docs/security/: auth.md  rls.md
scripts/: start.sh  test-entrypoint.sh
tests/: README.md  __init__.py  conftest.py  setup_test_user.sql
tests/core/: test_hashing.py  test_jwt.py
tests/fixtures/: database.py  factories.py
tests/integration/: test_rls.py
tests/modules/auth/: test_api.py  test_repositories.py  test_services.py
tests/modules/forms/: __init__.py  test_api.py  test_services.py
tests/modules/submissions/: __init__.py  test_api.py  test_services.py
tests/modules/workspaces/: __init__.py  test_api.py  test_services.py
(+44 files in other folders)
